--- a/OurLasalle/appsettings.json
+++ b/OurLasalle/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "AuthApiBaseUrl": "https://localhost:7278"
 }
