changed to local database per node

--- a/Authentication/appsettings.json
+++ b/Authentication/appsettings.json
@@ -12,6 +12,6 @@
     "Audience": "AllServices"
   },
   "ConnectionStrings": {
-    "UserDatabase": "Server=localhost\\SQLEXPRESS;Database=UserDb;Trusted_Connection=true;TrustServerCertificate=true;"
+    "UserDatabase": "Data Source=Users.db"
   }
 }
