--- a/Courses/appsettings.json
+++ b/Courses/appsettings.json
@@ -12,6 +12,6 @@
     "Audience": "AllServices"
   },
   "ConnectionStrings": {
-    "CourseDatabase": "Server=localhost\\SQLEXPRESS;Database=CourseDb;Trusted_Connection=true;TrustServerCertificate=true;"
+    "CourseDatabase": "Data Source=Courses.db"
   }
 }
