changed api base url

--- a/OurLasalle/appsettings.json
+++ b/OurLasalle/appsettings.json
@@ -11,6 +11,6 @@
     "Issuer": "AuthService",
     "Audience": "AllServices"
   },
-  "AuthApiBaseUrl": "https://localhost:7278",
-  "CourseApiBaseUrl": "https://localhost:7063"
+  "AuthApiBaseUrl": "http://localhost:5171",
+  "CourseApiBaseUrl": "http://localhost:5133"
 }
