--- a/Grades/appsettings.json
+++ b/Grades/appsettings.json
@@ -11,7 +11,7 @@
     "Issuer": "AuthService",
     "Audience": "AllServices"
   },
-  "AuthApiBaseUrl": "https://localhost:7278",
-  "CourseApiBaseUrl": "https://localhost:7063",
-  "GradeApiBaseUrl": "https://localhost:7102"
+  "ConnectionStrings": {
+    "GradeDatabase": "Data Source=Grades.db"
+  }
 }
