--- a/Authentication/appsettings.json
+++ b/Authentication/appsettings.json
@@ -12,6 +12,7 @@
     "Audience": "AllServices"
   },
   "ConnectionStrings": {
-    "UserDatabase": "Data Source=Users.db"
+    "UserDatabase": "Data Source=/app/data/Users.db"
   }
+
 }
