--- a/Courses/appsettings.json
+++ b/Courses/appsettings.json
@@ -12,6 +12,6 @@
     "Audience": "AllServices"
   },
   "ConnectionStrings": {
-    "CourseDatabase": "Data Source=Courses.db"
+    "CourseDatabase": "Data Source=/app/data/Courses.db"
   }
 }
