--- a/Grades/appsettings.json
+++ b/Grades/appsettings.json
@@ -12,6 +12,6 @@
     "Audience": "AllServices"
   },
   "ConnectionStrings": {
-    "GradeDatabase": "Data Source=Grades.db"
+    "GradeDatabase": "Data Source=/app/data/Grades.db"
   }
 }
