--- a/OurLasalle/appsettings.json
+++ b/OurLasalle/appsettings.json
@@ -11,7 +11,7 @@
     "Issuer": "AuthService",
     "Audience": "AllServices"
   },
-  "AuthApiBaseUrl": "https://localhost:7278",
-  "CourseApiBaseUrl": "https://localhost:7063",
-  "GradeApiBaseUrl": "https://localhost:7102"
+  "AuthApiBaseUrl": "http://192.168.254.148:8080",
+  "CourseApiBaseUrl": "http://192.168.254.146:8080",
+  "GradeApiBaseUrl": "http://192.168.254.149:8080"
 }
